<resources>
    <string name="app_name">Basic Social Media</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="save">SAVE</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="password_again">Password Again</string>
    <string name="log_out">Log Out</string>
    <string name="more">More</string>
    <string name="close">Close</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_post">Add Post</string>
    <string name="upload">UPLOAD</string>
    <string name="commentText">Comment</string>
    <string name="select_an_image">Select an image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="image">Image</string>
</resources>