<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/moreEFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:contentDescription="@string/more"
        android:text="@string/close"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/logoutEFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/log_out"
        android:text="@string/log_out"
        app:icon="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toTopOf="@+id/moreEFAB"
        app:layout_constraintEnd_toEndOf="@+id/moreEFAB" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/deleteAccountEFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/delete_account"
        android:text="@string/delete_account"
        app:icon="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toTopOf="@+id/logoutEFAB"
        app:layout_constraintEnd_toEndOf="@+id/logoutEFAB" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addPostEFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_post"
        android:text="@string/add_post"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountEFAB"
        app:layout_constraintEnd_toEndOf="@+id/deleteAccountEFAB" />

</androidx.constraintlayout.widget.ConstraintLayout>