<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/surnameEditText"
        app:layout_constraintEnd_toEndOf="@+id/surnameEditText"
        app:layout_constraintStart_toStartOf="@+id/surnameEditText" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints="surname"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/surname"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space" />

    <android.widget.Space
        android:id="@+id/space"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints="password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordAgainEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordAgainEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgainEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>